--- a/AzureSpeech.uplugin
+++ b/AzureSpeech.uplugin
@@ -4,7 +4,7 @@
 	"VersionName": "1.0.0",
 	"FriendlyName": "Azure Speech",
 	"Description": "Support for Azure Cognition Services: Speech-To-Text & Text-To-Speech",
-	"Category": "Other",
+	"Category": "Game Features",
 	"CreatedBy": "Lucas Vilas-Boas",
 	"CreatedByURL": "https://www.linkedin.com/in/lucoiso",
 	"DocsURL": "https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/",
