Some adjustments to match UE Marketplace publishing rules

--- a/AzureSpeech.uplugin
+++ b/AzureSpeech.uplugin
@@ -2,13 +2,14 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0.0",
+	"EngineVersion" : "4.27",
 	"FriendlyName": "Azure Speech",
 	"Description": "Support for Azure Cognition Services: Speech-To-Text & Text-To-Speech",
 	"Category": "Game Features",
 	"CreatedBy": "Lucas Vilas-Boas",
 	"CreatedByURL": "https://www.linkedin.com/in/lucoiso",
 	"DocsURL": "https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/94ad3e51c6f443718cdb312b48742bb3",
 	"SupportURL": "",
 	"CanContainContent": false,
 	"IsBetaVersion": false,
