--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -3,21 +3,21 @@
 	"Version": 1,
 	"VersionName": "1.1.0",
 	"EngineVersion" : "4.27",
-	"FriendlyName": "Azure Speech",
+	"FriendlyName": "AzSpeech",
 	"Description": "Support for Azure Cognition Services: Speech-To-Text & Text-To-Speech",
 	"Category": "Game Features",
 	"CreatedBy": "Lucas Vilas-Boas",
-	"CreatedByURL": "https://www.linkedin.com/in/lucoiso",
+	"CreatedByURL": "https://www.linkedin.com/in/lucoiso/",
 	"DocsURL": "https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/94ad3e51c6f443718cdb312b48742bb3",
-	"SupportURL": "https://forums.unrealengine.com/t/free-azurespeech-plugin-async-text-to-voice-and-voice-to-text-with-microsoft-azure/495394",
+	"SupportURL": "https://forums.unrealengine.com/t/free-azspeech-plugin-async-text-to-voice-and-voice-to-text-with-microsoft-azure/495394",
 	"CanContainContent": false,
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "AzureSpeech",
+			"Name": "AzSpeech",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": [
