--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -2,13 +2,13 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.1.0",
-	"EngineVersion" : "4.27",
+	"EngineVersion": "4.27",
 	"FriendlyName": "AzSpeech",
 	"Description": "Support for Azure Cognition Services: Speech-To-Text & Text-To-Speech",
 	"Category": "Game Features",
 	"CreatedBy": "Lucas Vilas-Boas",
 	"CreatedByURL": "https://www.linkedin.com/in/lucoiso/",
-	"DocsURL": "https://docs.microsoft.com/en-us/azure/cognitive-services/speech-service/",
+	"DocsURL": "https://github.com/lucoiso/UEAzSpeech/blob/main/README.md",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/94ad3e51c6f443718cdb312b48742bb3",
 	"SupportURL": "https://forums.unrealengine.com/t/free-azspeech-plugin-async-text-to-voice-and-voice-to-text-with-microsoft-azure/495394",
 	"CanContainContent": false,
