--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -20,7 +20,7 @@
 			"Name": "AzSpeech",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
+			"PlatformAllowList": [
 				"Win64"
 			]
 		}
