Made some adjustments and added Android as whitelisted platform

--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -21,7 +21,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [
-				"Win64"
+				"Win64",
+				"Android"
 			]
 		}
 	]
