--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -25,5 +25,12 @@
 				"Android"
 			]
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "AndroidPermission",
+			"Enabled": true,
+			"Optional": true
+		}
 	]
 }
