Adjust delegates and add core redirects #22 #35

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -1,9 +1,26 @@
 [CoreRedirects]
-+FunctionRedirects = (OldName="SSMLToStreamAsync.SSMLToStreamAsync", NewName="SSMLToStreamAsync.SSMLToStream")
-+FunctionRedirects = (OldName="SSMLToVoiceAsync.SSMLToVoiceAsync", NewName="SSMLToVoiceAsync.SSMLToVoice")
-+FunctionRedirects = (OldName="SSMLToWavAsync.SSMLToWavAsync", NewName="SSMLToWavAsync.SSMLToWav")
-+FunctionRedirects = (OldName="TextToStreamAsync.TextToStreamAsync", NewName="TextToStreamAsync.TextToStream")
-+FunctionRedirects = (OldName="TextToVoiceAsync.TextToVoiceAsync", NewName="TextToVoiceAsync.TextToVoice")
-+FunctionRedirects = (OldName="TextToWavAsync.TextToWavAsync", NewName="TextToWavAsync.TextToWav")
-+FunctionRedirects = (OldName="VoiceToTextAsync.VoiceToTextAsync", NewName="VoiceToTextAsync.VoiceToText")
-+FunctionRedirects = (OldName="WavToTextAsync.WavToTextAsync", NewName="WavToTextAsync.WavToText")
++FunctionRedirects=(OldName="SSMLToStreamAsync.SSMLToStreamAsync", NewName="SSMLToStreamAsync.SSMLToStream")
++FunctionRedirects=(OldName="SSMLToVoiceAsync.SSMLToVoiceAsync", NewName="SSMLToVoiceAsync.SSMLToVoice")
++FunctionRedirects=(OldName="SSMLToWavAsync.SSMLToWavAsync", NewName="SSMLToWavAsync.SSMLToWav")
++FunctionRedirects=(OldName="TextToStreamAsync.TextToStreamAsync", NewName="TextToStreamAsync.TextToStream")
++FunctionRedirects=(OldName="TextToVoiceAsync.TextToVoiceAsync", NewName="TextToVoiceAsync.TextToVoice")
++FunctionRedirects=(OldName="TextToWavAsync.TextToWavAsync", NewName="TextToWavAsync.TextToWav")
++FunctionRedirects=(OldName="VoiceToTextAsync.VoiceToTextAsync", NewName="VoiceToTextAsync.VoiceToText")
++FunctionRedirects=(OldName="WavToTextAsync.WavToTextAsync", NewName="WavToTextAsync.WavToText")
+
++PropertyRedirects=(OldName="TextToWavAsync.TaskCompleted", NewName="TextToWavAsync.SynthesisCompleted")
++PropertyRedirects=(OldName="TextToVoiceAsync.TaskCompleted", NewName="TextToVoiceAsync.SynthesisCompleted")
++PropertyRedirects=(OldName="TextToStreamAsync.TaskCompleted", NewName="TextToStreamAsync.SynthesisCompleted")
++PropertyRedirects=(OldName="SSMLToWavAsync.TaskCompleted", NewName="SSMLToWavAsync.SynthesisCompleted")
++PropertyRedirects=(OldName="SSMLToVoiceAsync.TaskCompleted", NewName="SSMLToVoiceAsync.SynthesisCompleted")
++PropertyRedirects=(OldName="SSMLToStreamAsync.TaskCompleted", NewName="SSMLToStreamAsync.SynthesisCompleted")
+
++PropertyRedirects=(OldName="VoiceToTextAsync.TaskCompleted", NewName="AzSpeechRecognizerTaskBase.RecognitionCompleted")
++PropertyRedirects=(OldName="WavToTextAsync.TaskCompleted", NewName="AzSpeechRecognizerTaskBase.RecognitionCompleted")
+
++StructRedirects=(OldName="TextToWavDelegate", NewName="BooleanSynthesisDelegate")
++StructRedirects=(OldName="TextToVoiceDelegate", NewName="BooleanSynthesisDelegate")
++StructRedirects=(OldName="TextToStreamDelegate", NewName="StreamSynthesisDelegate")
++StructRedirects=(OldName="SSMLToWavDelegate", NewName="BooleanSynthesisDelegate")
++StructRedirects=(OldName="SSMLToVoiceDelegate", NewName="BooleanSynthesisDelegate")
++StructRedirects=(OldName="SSMLToStreamDelegate", NewName="StreamSynthesisDelegate")
