Add core redirects, remove unnecessary includes and adjust helper functions #22 #35

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -8,19 +8,51 @@
 +FunctionRedirects=(OldName="VoiceToTextAsync.VoiceToTextAsync", NewName="VoiceToTextAsync.VoiceToText")
 +FunctionRedirects=(OldName="WavToTextAsync.WavToTextAsync", NewName="WavToTextAsync.WavToText")
 
+; v5.2.0
+; Delegates
++ClassRedirects=(OldName="TextToWavDelegate", NewName="BooleanSynthesisDelegate")
++ClassRedirects=(OldName="TextToVoiceDelegate", NewName="BooleanSynthesisDelegate")
++ClassRedirects=(OldName="TextToStreamDelegate", NewName="StreamSynthesisDelegate")
++ClassRedirects=(OldName="SSMLToWavDelegate", NewName="BooleanSynthesisDelegate")
++ClassRedirects=(OldName="SSMLToVoiceDelegate", NewName="BooleanSynthesisDelegate")
++ClassRedirects=(OldName="SSMLToStreamDelegate", NewName="StreamSynthesisDelegate")
++ClassRedirects=(OldName="VoiceToTextDelegate", NewName="RecognitionCompleted")
++ClassRedirects=(OldName="WavToTextDelegate", NewName="RecognitionCompleted")
++ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
++ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
+
+; Properties
 +PropertyRedirects=(OldName="TextToWavAsync.TaskCompleted", NewName="TextToWavAsync.SynthesisCompleted")
 +PropertyRedirects=(OldName="TextToVoiceAsync.TaskCompleted", NewName="TextToVoiceAsync.SynthesisCompleted")
 +PropertyRedirects=(OldName="TextToStreamAsync.TaskCompleted", NewName="TextToStreamAsync.SynthesisCompleted")
 +PropertyRedirects=(OldName="SSMLToWavAsync.TaskCompleted", NewName="SSMLToWavAsync.SynthesisCompleted")
 +PropertyRedirects=(OldName="SSMLToVoiceAsync.TaskCompleted", NewName="SSMLToVoiceAsync.SynthesisCompleted")
 +PropertyRedirects=(OldName="SSMLToStreamAsync.TaskCompleted", NewName="SSMLToStreamAsync.SynthesisCompleted")
-
 +PropertyRedirects=(OldName="VoiceToTextAsync.TaskCompleted", NewName="AzSpeechRecognizerTaskBase.RecognitionCompleted")
 +PropertyRedirects=(OldName="WavToTextAsync.TaskCompleted", NewName="AzSpeechRecognizerTaskBase.RecognitionCompleted")
 
-+StructRedirects=(OldName="TextToWavDelegate", NewName="BooleanSynthesisDelegate")
-+StructRedirects=(OldName="TextToVoiceDelegate", NewName="BooleanSynthesisDelegate")
-+StructRedirects=(OldName="TextToStreamDelegate", NewName="StreamSynthesisDelegate")
-+StructRedirects=(OldName="SSMLToWavDelegate", NewName="BooleanSynthesisDelegate")
-+StructRedirects=(OldName="SSMLToVoiceDelegate", NewName="BooleanSynthesisDelegate")
-+StructRedirects=(OldName="SSMLToStreamDelegate", NewName="StreamSynthesisDelegate")
+; Delegates parameters
++PropertyRedirects=(OldName="RecognitionCompleted.RecognizedString", NewName="RecognitionCompleted.FinalString")
++PropertyRedirects=(OldName="BooleanSynthesisDelegate.OutputValue", NewName="BooleanSynthesisDelegate.Success")
++PropertyRedirects=(OldName="BooleanSynthesisDelegate.Success", NewName="BooleanSynthesisDelegate.bSuccess")
+
+; Tasks output: result
++PropertyRedirects=(OldName="WavToTextAsync.WavToText.RecognizedString", NewName="WavToTextAsync.WavToText.FinalString")
++PropertyRedirects=(OldName="VoiceToTextAsync.VoiceToText.RecognizedString", NewName="VoiceToTextAsync.VoiceToText.FinalString")
++PropertyRedirects=(OldName="SSMLToVoiceAsync.SSMLToVoice.OutputValue", NewName="SSMLToVoiceAsync.SSMLToVoice.RecognizedStream")
++PropertyRedirects=(OldName="SSMLToWavAsync.SSMLToWav.OutputValue", NewName="SSMLToWavAsync.SSMLToWav.bSuccess")
++PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.OutputValue", NewName="TextToVoiceAsync.TextToVoice.RecognizedStream")
++PropertyRedirects=(OldName="TextToWavAsync.TextToWav.OutputValue", NewName="TextToWavAsync.TextToWav.bSuccess")
+
+; Tasks output: broadcast
++PropertyRedirects=(OldName="WavToTextAsync.WavToText.TaskCompleted", NewName="WavToTextAsync.WavToText.RecognitionCompleted")
++PropertyRedirects=(OldName="VoiceToTextAsync.VoiceToText.TaskCompleted", NewName="VoiceToTextAsync.VoiceToText.RecognitionCompleted")
++PropertyRedirects=(OldName="SSMLToStreamAsync.SSMLToStream.TaskCompleted", NewName="SSMLToStreamAsync.SSMLToStream.SynthesisCompleted")
++PropertyRedirects=(OldName="SSMLToVoiceAsync.SSMLToVoice.TaskCompleted", NewName="SSMLToVoiceAsync.SSMLToVoice.SynthesisCompleted")
++PropertyRedirects=(OldName="SSMLToWavAsync.SSMLToWav.TaskCompleted", NewName="SSMLToWavAsync.SSMLToWav.SynthesisCompleted")
++PropertyRedirects=(OldName="TextToStreamAsync.TextToStream.TaskCompleted", NewName="TextToStreamAsync.TextToStream.SynthesisCompleted")
++PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.TaskCompleted", NewName="TextToVoiceAsync.TextToVoice.SynthesisCompleted")
++PropertyRedirects=(OldName="TextToWavAsync.TextToWav.TaskCompleted", NewName="TextToWavAsync.TextToWav.SynthesisCompleted")
+
+; Functions params
++PropertyRedirects=(OldName="AzSpeechHelper.CheckAndroidPermission.InPermissionStr", NewName="AzSpeechHelper.CheckAndroidPermission.InPermission")
