More changes and new functions: SSML to SoundWave and Text to SoundWave

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -20,6 +20,7 @@
 +ClassRedirects=(OldName="WavToTextDelegate", NewName="RecognitionCompleted")
 +ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
 +ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
++ClassRedirects=(OldName="StreamSynthesisDelegate", NewName="AudioDataSynthesisDelegate")
 
 ; Properties
 +PropertyRedirects=(OldName="TextToWavAsync.TaskCompleted", NewName="TextToWavAsync.SynthesisCompleted")
@@ -43,6 +44,8 @@
 +PropertyRedirects=(OldName="SSMLToWavAsync.SSMLToWav.OutputValue", NewName="SSMLToWavAsync.SSMLToWav.bSuccess")
 +PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.OutputValue", NewName="TextToVoiceAsync.TextToVoice.RecognizedStream")
 +PropertyRedirects=(OldName="TextToWavAsync.TextToWav.OutputValue", NewName="TextToWavAsync.TextToWav.bSuccess")
++PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.RecognizedStream", NewName="TextToVoiceAsync.TextToVoice.FinalAudioData")
++PropertyRedirects=(OldName="SSMLToVoiceAsync.SSMLToVoice.RecognizedStream", NewName="SSMLToVoiceAsync.SSMLToVoice.FinalAudioData")
 
 ; Tasks output: broadcast
 +PropertyRedirects=(OldName="WavToTextAsync.WavToText.TaskCompleted", NewName="WavToTextAsync.WavToText.RecognitionCompleted")
@@ -56,3 +59,26 @@
 
 ; Functions params
 +PropertyRedirects=(OldName="AzSpeechHelper.CheckAndroidPermission.InPermissionStr", NewName="AzSpeechHelper.CheckAndroidPermission.InPermission")
+
+; Classes
++ClassRedirects=(OldName="SSMLToVoiceAsync", NewName="SSMLToSpeechAsync")
++ClassRedirects=(OldName="TextToVoiceAsync", NewName="TextToSpeechAsync")
++ClassRedirects=(OldName="VoiceToTextAsync", NewName="SpeechToTextAsync")
++ClassRedirects=(OldName="SSMLToStreamAsync", NewName="SSMLToAudioDataAsync")
++ClassRedirects=(OldName="TextToStreamAsync", NewName="TextToAudioDataAsync")
++ClassRedirects=(OldName="TextToWavAsync", NewName="TextToWavFileAsync")
++ClassRedirects=(OldName="SSMLToWavAsync", NewName="SSMLToWavFileAsync")
++ClassRedirects=(OldName="WavToTextAsync", NewName="WavFileToTextAsync")
+
+; Functions
++FunctionRedirects==(OldName="SSMLToSpeechAsync.SSMLToVoice", NewName="SSMLToSpeechAsync.SSMLToSpeech")
++FunctionRedirects=(OldName="TextToSpeechAsync.TextToVoice", NewName="TextToSpeechAsync.TextToSpeech")
++FunctionRedirects=(OldName="SpeechToTextAsync.VoiceToText", NewName="SpeechToTextAsync.SpeechToText")
++FunctionRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData")
++FunctionRedirects=(OldName="TextToAudioDataAsync.TextToStream", NewName="TextToAudioDataAsync.TextToAudioData")
++FunctionRedirects=(OldName="TextToWavFileAsync.TextToWav", NewName="TextToWavFileAsync.TextToWavFile")
++FunctionRedirects=(OldName="SSMLToWavFileAsync.SSMLToWav", NewName="SSMLToWavFileAsync.SSMLToWavFile")
++FunctionRedirects=(OldName="WavFileToTextAsync.WavToText", NewName="WavFileToTextAsync.WavFileToText")
+
++FunctionRedirects=(OldName="AzSpeechHelper.ConvertStreamToSoundWave", NewName="AzSpeechHelper.ConvertAudioDataToSoundWave")
++FunctionRedirects=(OldName="AzSpeechHelper.IsStreamValid", NewName="AzSpeechHelper.IsAudioDataValid")
