Add more Core Redirects #36

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -20,7 +20,6 @@
 +ClassRedirects=(OldName="WavToTextDelegate", NewName="RecognitionCompleted")
 +ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
 +ClassRedirects=(OldName="RecognitionCompleted", NewName="RecognitionCompletedDelegate")
-+ClassRedirects=(OldName="StreamSynthesisDelegate", NewName="AudioDataSynthesisDelegate")
 
 ; Properties
 +PropertyRedirects=(OldName="TextToWavAsync.TaskCompleted", NewName="TextToWavAsync.SynthesisCompleted")
@@ -44,8 +43,6 @@
 +PropertyRedirects=(OldName="SSMLToWavAsync.SSMLToWav.OutputValue", NewName="SSMLToWavAsync.SSMLToWav.bSuccess")
 +PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.OutputValue", NewName="TextToVoiceAsync.TextToVoice.RecognizedStream")
 +PropertyRedirects=(OldName="TextToWavAsync.TextToWav.OutputValue", NewName="TextToWavAsync.TextToWav.bSuccess")
-+PropertyRedirects=(OldName="TextToVoiceAsync.TextToVoice.RecognizedStream", NewName="TextToVoiceAsync.TextToVoice.FinalAudioData")
-+PropertyRedirects=(OldName="SSMLToVoiceAsync.SSMLToVoice.RecognizedStream", NewName="SSMLToVoiceAsync.SSMLToVoice.FinalAudioData")
 
 ; Tasks output: broadcast
 +PropertyRedirects=(OldName="WavToTextAsync.WavToText.TaskCompleted", NewName="WavToTextAsync.WavToText.RecognitionCompleted")
@@ -82,3 +79,17 @@
 
 +FunctionRedirects=(OldName="AzSpeechHelper.ConvertStreamToSoundWave", NewName="AzSpeechHelper.ConvertAudioDataToSoundWave")
 +FunctionRedirects=(OldName="AzSpeechHelper.IsStreamValid", NewName="AzSpeechHelper.IsAudioDataValid")
+
+; Post Changes - Delegates
++ClassRedirects=(OldName="StreamSynthesisDelegate", NewName="AudioDataSynthesisDelegate")
+
+; Post changes - Delegates parameters
++PropertyRedirects=(OldName="AudioDataSynthesisDelegate.RecognizedStream", NewName="AudioDataSynthesisDelegate.FinalAudioData")
+
+; Post changes - Tasks output: result
++PropertyRedirects=(OldName="TextToSpeechAsync.TextToSpeech.RecognizedStream", NewName="TextToSpeechAsync.TextToSpeech.FinalAudioData")
++PropertyRedirects=(OldName="SSMLToSpeechAsync.SSMLToSpeech.RecognizedStream", NewName="SSMLToSpeechAsync.SSMLToSpeech.FinalAudioData")
++PropertyRedirects=(OldName="TextToSpeechAsync.TextToSpeech.FinalAudioData", NewName="TextToSpeechAsync.TextToSpeech.bSuccess")
++PropertyRedirects=(OldName="SSMLToSpeechAsync.SSMLToSpeech.FinalAudioData", NewName="SSMLToSpeechAsync.SSMLToSpeech.bSuccess")
++PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream.RecognizedStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData.FinalAudioData")
++PropertyRedirects=(OldName="TextToAudioDataAsync.TextToStream.RecognizedStream", NewName="TextToAudioDataAsync.TextToAudioData.FinalAudioData")
