Fix viseme output #50; Add Game Thread verifications; Move some task parts to game thread; Adjustments;

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -95,3 +95,6 @@
 +PropertyRedirects=(OldName="SSMLToSpeechAsync.SSMLToSpeech.OutputValue", NewName="SSMLToSpeechAsync.SSMLToSpeech.bSuccess")
 +PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream.RecognizedStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData.FinalAudioData")
 +PropertyRedirects=(OldName="TextToAudioDataAsync.TextToStream.RecognizedStream", NewName="TextToAudioDataAsync.TextToAudioData.FinalAudioData")
+
+; v1.2.6
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedStream", NewName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData")
