--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -98,3 +98,5 @@
 
 ; v1.2.6
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedStream", NewName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData")
++PropertyRedirects=(OldName="AzSpeechSettings.AutoLanguageCandidates", NewName="AzSpeechSettings.AutoCandidateLanguages")
++PropertyRedirects=(OldName="AzSpeechSettings.bEnableRuntimeDebug", NewName="AzSpeechSettings.bEnableDebuggingLogs")
