Adjustments to process task in background

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -100,3 +100,4 @@
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedStream", NewName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData")
 +PropertyRedirects=(OldName="AzSpeechSettings.AutoLanguageCandidates", NewName="AzSpeechSettings.AutoCandidateLanguages")
 +PropertyRedirects=(OldName="AzSpeechSettings.bEnableRuntimeDebug", NewName="AzSpeechSettings.bEnableDebuggingLogs")
++ClassRedirects=(OldName="SynthesisUpdatedGenericDelegate", NewName="AzSpeechTaskGenericDelegate")
