Adjust logging and debugging print + Rename members + Add redirects

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -101,3 +101,6 @@
 +PropertyRedirects=(OldName="AzSpeechSettings.AutoLanguageCandidates", NewName="AzSpeechSettings.AutoCandidateLanguages")
 +PropertyRedirects=(OldName="AzSpeechSettings.bEnableRuntimeDebug", NewName="AzSpeechSettings.bEnableDebuggingLogs")
 +ClassRedirects=(OldName="SynthesisUpdatedGenericDelegate", NewName="AzSpeechTaskGenericDelegate")
++FunctionRedirects=(OldName="AzSpeechRecognizerTaskBase.GetLastRecognizedString", NewName="AzSpeechRecognizerTaskBase.GetRecognizedString")
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetVisemeData")
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData", NewName="AzSpeechSynthesizerTaskBase.GetAudioData")
