Rename function and adjust comment

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -104,3 +104,4 @@
 +FunctionRedirects=(OldName="AzSpeechRecognizerTaskBase.GetLastRecognizedString", NewName="AzSpeechRecognizerTaskBase.GetRecognizedString")
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetVisemeData")
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData", NewName="AzSpeechSynthesizerTaskBase.GetAudioData")
++FunctionRedirects=(OldName="AzSpeechHelper.ConvertFileToSoundWave", NewName="AzSpeechHelper.ConvertWavFileToSoundWave")
