Add support for Phrase List directly in tasks. New settings Added: Phrase List Map!

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -96,7 +96,7 @@
 +PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream.RecognizedStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData.FinalAudioData")
 +PropertyRedirects=(OldName="TextToAudioDataAsync.TextToStream.RecognizedStream", NewName="TextToAudioDataAsync.TextToAudioData.FinalAudioData")
 
-; v1.2.6
+; v1.3.0
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedStream", NewName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData")
 +PropertyRedirects=(OldName="AzSpeechSettings.AutoLanguageCandidates", NewName="AzSpeechSettings.AutoCandidateLanguages")
 +PropertyRedirects=(OldName="AzSpeechSettings.bEnableRuntimeDebug", NewName="AzSpeechSettings.bEnableDebuggingLogs")
@@ -105,3 +105,4 @@
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetVisemeData")
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData", NewName="AzSpeechSynthesizerTaskBase.GetAudioData")
 +FunctionRedirects=(OldName="AzSpeechHelper.ConvertFileToSoundWave", NewName="AzSpeechHelper.ConvertWavFileToSoundWave")
++PropertyRedirects=(OldName="AzSpeechRecognitionMap.RecognitionData", NewName="AzSpeechRecognitionMap.Data")
