--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -68,7 +68,7 @@
 +ClassRedirects=(OldName="WavToTextAsync", NewName="WavFileToTextAsync")
 
 ; Functions
-+FunctionRedirects==(OldName="SSMLToSpeechAsync.SSMLToVoice", NewName="SSMLToSpeechAsync.SSMLToSpeech")
++FunctionRedirects=(OldName="SSMLToSpeechAsync.SSMLToVoice", NewName="SSMLToSpeechAsync.SSMLToSpeech")
 +FunctionRedirects=(OldName="TextToSpeechAsync.TextToVoice", NewName="TextToSpeechAsync.TextToSpeech")
 +FunctionRedirects=(OldName="SpeechToTextAsync.VoiceToText", NewName="SpeechToTextAsync.SpeechToText")
 +FunctionRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData")
@@ -95,3 +95,26 @@
 +PropertyRedirects=(OldName="SSMLToSpeechAsync.SSMLToSpeech.OutputValue", NewName="SSMLToSpeechAsync.SSMLToSpeech.bSuccess")
 +PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToStream.RecognizedStream", NewName="SSMLToAudioDataAsync.SSMLToAudioData.FinalAudioData")
 +PropertyRedirects=(OldName="TextToAudioDataAsync.TextToStream.RecognizedStream", NewName="TextToAudioDataAsync.TextToAudioData.FinalAudioData")
+
+; v1.3.0
++ClassRedirects=(OldName="SynthesisUpdatedGenericDelegate", NewName="AzSpeechTaskGenericDelegate")
+
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedStream", NewName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData")
+
++PropertyRedirects=(OldName="AzSpeechSettings.AutoLanguageCandidates", NewName="AzSpeechSettings.AutoCandidateLanguages")
++PropertyRedirects=(OldName="AzSpeechSettings.bEnableRuntimeDebug", NewName="AzSpeechSettings.bEnableDebuggingLogs")
++PropertyRedirects=(OldName="AzSpeechRecognitionMap.RecognitionData", NewName="AzSpeechRecognitionMap.Data")
+
++FunctionRedirects=(OldName="AzSpeechRecognizerTaskBase.GetLastRecognizedString", NewName="AzSpeechRecognizerTaskBase.GetRecognizedString")
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetVisemeData")
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetLastSynthesizedAudioData", NewName="AzSpeechSynthesizerTaskBase.GetAudioData")
++FunctionRedirects=(OldName="AzSpeechHelper.ConvertFileToSoundWave", NewName="AzSpeechHelper.ConvertWavFileToSoundWave")
+
++PropertyRedirects=(OldName="TextToSpeechAsync.TextToSpeech.TextToConvert", NewName="TextToSpeechAsync.TextToSpeech.SynthesisText")
++PropertyRedirects=(OldName="TextToSoundWaveAsync.TextToSoundWave.TextToConvert", NewName="TextToSoundWaveAsync.TextToSoundWave.SynthesisText")
++PropertyRedirects=(OldName="TextToWavFileAsync.TextToWavFile.TextToConvert", NewName="TextToWavFileAsync.TextToWavFile.SynthesisText")
++PropertyRedirects=(OldName="TextToAudioDataAsync.TextToAudioData.TextToConvert", NewName="TextToAudioDataAsync.TextToAudioData.SynthesisText")
++PropertyRedirects=(OldName="SSMLToSpeechAsync.SSMLToSpeech.SSMLString", NewName="SSMLToSpeechAsync.SSMLToSpeech.SynthesisSSML")
++PropertyRedirects=(OldName="SSMLToSoundWaveAsync.SSMLToSoundWave.SSMLString", NewName="SSMLToSoundWaveAsync.SSMLToSoundWave.SynthesisSSML")
++PropertyRedirects=(OldName="SSMLToWavFileAsync.SSMLToWavFile.SSMLString", NewName="SSMLToWavFileAsync.SSMLToWavFile.SynthesisSSML")
++PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToAudioData.SSMLString", NewName="SSMLToAudioDataAsync.SSMLToAudioData.SynthesisSSML")
