--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 7,
-	"VersionName": "1.3.7",
+	"VersionName": "1.3.8",
 	"FriendlyName": "AzSpeech - Voice and Text",
 	"Description": "Integrates Azure Speech Cognitive Services to the Engine by adding functions to perform recognition and synthesis via asynchronous tasks.",
 	"Category": "Game Features",
@@ -21,12 +21,8 @@
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [
 				"Win64",
-				"Linux",
-				"LinuxArm64",
-				"Android",
-				"IOS",
-				"Mac",
-				"HoloLens"
+				"HoloLens",
+				"Android"
 			]
 		}
 	],
