--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -1,9 +1,9 @@
 {
 	"FileVersion": 3,
-	"Version": 8,
-	"VersionName": "1.3.11",
+	"Version": 9,
+	"VersionName": "1.3.12",
 	"FriendlyName": "AzSpeech - Voice and Text",
-	"Description": "Integrates Azure Speech Cognitive Services to the Engine by adding functions to perform recognition and synthesis via asynchronous tasks.",
+	"Description": "Integrates Azure Speech Cognitive Services into the Engine by adding functions to perform recognition and synthesis via asynchronous tasks.",
 	"Category": "Game Features",
 	"CreatedBy": "Lucas Vilas-Boas",
 	"CreatedByURL": "https://github.com/lucoiso",
