#2 #87 Re-Add HoloLens to whitelisted platforms due to local BUILD SUCCESSFULL. Will check the behavior on UE's Marketplace

--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -21,7 +21,8 @@
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [
 				"Win64",
-				"Android"
+				"Android",
+				"HoloLens"
 			]
 		}
 	],
