#130 Mode status functions to a new BP library: AzSpeechTaskStatus

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -118,3 +118,8 @@
 +PropertyRedirects=(OldName="SSMLToSoundWaveAsync.SSMLToSoundWave.SSMLString", NewName="SSMLToSoundWaveAsync.SSMLToSoundWave.SynthesisSSML")
 +PropertyRedirects=(OldName="SSMLToWavFileAsync.SSMLToWavFile.SSMLString", NewName="SSMLToWavFileAsync.SSMLToWavFile.SynthesisSSML")
 +PropertyRedirects=(OldName="SSMLToAudioDataAsync.SSMLToAudioData.SSMLString", NewName="SSMLToAudioDataAsync.SSMLToAudioData.SynthesisSSML")
+
+; v1.4.3
++FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskActive", NewName="AzSpeechTaskStatus.IsTaskActive")
++FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskReadyToDestroy", NewName="AzSpeechTaskStatus.IsTaskReadyToDestroy")
++FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskStillValid", NewName="AzSpeechTaskStatus.IsTaskStillValid")
