Remove HoloLens from whitelisted platforms AGAIN due to a packaging issue that is occurring on marketplace .-.

--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -21,8 +21,7 @@
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [
 				"Win64",
-				"Android",
-				"HoloLens"
+				"Android"
 			]
 		},
 		{
