performance & security improvements

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -123,3 +123,6 @@
 +FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskActive", NewName="AzSpeechTaskStatus.IsTaskActive")
 +FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskReadyToDestroy", NewName="AzSpeechTaskStatus.IsTaskReadyToDestroy")
 +FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskStillValid", NewName="AzSpeechTaskStatus.IsTaskStillValid")
+
+; v1.4.7
++FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetLastVisemeData")
