--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -124,5 +124,8 @@
 +FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskReadyToDestroy", NewName="AzSpeechTaskStatus.IsTaskReadyToDestroy")
 +FunctionRedirects=(OldName="AzSpeechTaskBase.IsTaskStillValid", NewName="AzSpeechTaskStatus.IsTaskStillValid")
 
-; v1.4.7
+; v1.5.0
 +FunctionRedirects=(OldName="AzSpeechSynthesizerTaskBase.GetVisemeData", NewName="AzSpeechSynthesizerTaskBase.GetLastVisemeData")
+
+; v1.5.1
++PropertyRedirects=(OldName="AzSpeechSettings.APIAccessKey", NewName="AzSpeechSettings.SubscriptionKey")
