--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -156,3 +156,8 @@
 +FunctionRedirects=(OldName="SSMLToAudioDataAsync.SSMLToAudioDataAsync", NewName="SSMLToAudioDataAsync.SSMLToAudioData_CustomOptions")
 +FunctionRedirects=(OldName="AzSpeechSettings.GetDefaultSettings", NewName="AzSpeechSettings.GetDefaultOptions")
 +FunctionRedirects=(OldName="AzSpeechSettings.SetDefaultSettings", NewName="AzSpeechSettings.SetDefaultOptions")
+
+; v1.6.2
+; Properties
++PropertyRedirects=(OldName="AzSpeechHelper.ConvertWavFileToSoundWave.OutputModulePath", NewName="AzSpeechHelper.ConvertWavFileToSoundWave.OutputModule")
++PropertyRedirects=(OldName="AzSpeechHelper.ConvertAudioDataToSoundWave.OutputModulePath", NewName="AzSpeechHelper.ConvertAudioDataToSoundWave.OutputModule")
