Standalone Editor Tasks #175

--- a/Config/DefaultAzSpeech.ini
+++ b/Config/DefaultAzSpeech.ini
@@ -162,9 +162,27 @@
 +PropertyRedirects=(OldName="AzSpeechHelper.ConvertWavFileToSoundWave.OutputModulePath", NewName="AzSpeechHelper.ConvertWavFileToSoundWave.OutputModule")
 +PropertyRedirects=(OldName="AzSpeechHelper.ConvertAudioDataToSoundWave.OutputModulePath", NewName="AzSpeechHelper.ConvertAudioDataToSoundWave.OutputModule")
 
-; v1.6.4
+; v1.6.5
 ; Properties
 +PropertyRedirects=(OldName="AzSpeechSettingsOptions.SubscriptionKey", NewName="AzSpeechSettingsOptions.SubscriptionOptions.SubscriptionKey")
 +PropertyRedirects=(OldName="AzSpeechSettingsOptions.RegionID", NewName="AzSpeechSettingsOptions.SubscriptionOptions.RegionID")
 +PropertyRedirects=(OldName="AzSpeechSettingsOptions.bUsePrivateEndpoint", NewName="AzSpeechSettingsOptions.SubscriptionOptions.bUsePrivateEndpoint")
 +PropertyRedirects=(OldName="AzSpeechSettingsOptions.PrivateEndpoint", NewName="AzSpeechSettingsOptions.SubscriptionOptions.PrivateEndpoint")
+
+; v1.6.6
+; Functions params
++PropertyRedirects=(OldName="SpeechToTextAsync.SpeechToText_DefaultOptions.LanguageID", NewName="SpeechToTextAsync.SpeechToText_DefaultOptions.Locale")
++PropertyRedirects=(OldName="WavFileToTextAsync.WavFileToText_DefaultOptions.LanguageID", NewName="WavFileToTextAsync.WavFileToText_DefaultOptions.Locale")
++PropertyRedirects=(OldName="TextToSpeechAsync.TextToSpeech_DefaultOptions.VoiceName", NewName="TextToSpeechAsync.TextToSpeech_DefaultOptions.Voice")
++PropertyRedirects=(OldName="TextToSpeechAsync.TextToSpeech_DefaultOptions.LanguageID", NewName="TextToSpeechAsync.TextToSpeech_DefaultOptions.Locale")
++PropertyRedirects=(OldName="TextToSoundWaveAsync.TextToSoundWave_DefaultOptions.VoiceName", NewName="TextToSoundWaveAsync.TextToSoundWave_DefaultOptions.Voice")
++PropertyRedirects=(OldName="TextToSoundWaveAsync.TextToSoundWave_DefaultOptions.LanguageID", NewName="TextToSoundWaveAsync.TextToSoundWave_DefaultOptions.Locale")
++PropertyRedirects=(OldName="TextToWavFileAsync.TextToWavFile_DefaultOptions.VoiceName", NewName="TextToWavFileAsync.TextToWavFile_DefaultOptions.Voice")
++PropertyRedirects=(OldName="TextToWavFileAsync.TextToWavFile_DefaultOptions.LanguageID", NewName="TextToWavFileAsync.TextToWavFile_DefaultOptions.Locale")
++PropertyRedirects=(OldName="TextToAudioDataAsync.TextToAudioData_DefaultOptions.VoiceName", NewName="TextToAudioDataAsync.TextToAudioData_DefaultOptions.Voice")
++PropertyRedirects=(OldName="TextToAudioDataAsync.TextToAudioData_DefaultOptions.LanguageID", NewName="TextToAudioDataAsync.TextToAudioData_DefaultOptions.Locale")
+
+; Properties
++PropertyRedirects=(OldName="AzSpeechRecognitionOptions.LanguageID", NewName="AzSpeechRecognitionOptions.Locale")
++PropertyRedirects=(OldName="AzSpeechSynthesisOptions.LanguageID", NewName="AzSpeechSynthesisOptions.Locale")
++PropertyRedirects=(OldName="AzSpeechSynthesisOptions.VoiceName", NewName="AzSpeechSynthesisOptions.Voice")
