--- a/AzSpeech.uplugin
+++ b/AzSpeech.uplugin
@@ -1,7 +1,7 @@
 {
   "FileVersion": 3,
-  "Version": 36,
-  "VersionName": "1.6.19",
+  "Version": 37,
+  "VersionName": "1.6.20",
   "FriendlyName": "AzSpeech - Voice and Text",
   "Description": "Integrates Azure Speech Cognitive Services into the Engine by adding functions to perform recognition and synthesis via asynchronous tasks.",
   "Category": "Game Features",
@@ -21,7 +21,10 @@
       "LoadingPhase": "Default",
       "PlatformAllowList": [
         "Win64",
-        "Android"
+        "Android",
+        "IOS",
+        "Mac",
+        "Linux"
       ]
     },
     {
